<resources>
    <string name="app_name">Cumhuriyet Spor Salonu</string>
    <string name="default_success_message">Başarılı</string>
    <string name="default_error_message">Bir hata oluştu</string>

    <string name="monday">Pazartesi</string>
    <string name="tuesday">Salı</string>
    <string name="wednesday">Çarşamba</string>
    <string name="thursday">Perşembe</string>
    <string name="friday">Cuma</string>
    <string name="saturday">Cumartesi</string>
    <string name="sunday">Pazar</string>

    <string name="login_success">Başarıyla giriş yapıldı</string>
    <string name="login_error_default">Giriş yaparken bir sorun oluştu</string>
    <string name="login_error_invalid_credentials">Geçersiz kimlik bilgileri kullanıldı</string>
    <string name="login_error_empty_space">Lütfen giriş bilgilerini boş bırakmayınız</string>
    <string name="login_error_invalid_user">Kullanıcı hesabı bulunamadı ya da devre dışı bırakıldı</string>
    <string name="login_error_user">Kullanıcı hesabı durumu nedeniyle giriş yetkisi bulunmamaktadır</string>
    <string name="login_error_recent_login">Tekrar giriş yapmanız gerekiyor</string>

    <string name="firebase_error_too_many_request">Çok fazla istek gönderdiniz, lütfen biraz bekleyin ve tekrar deneyin</string>
    <string name="firebase_error_network">Lütfen internet bağlantınızı kontrol edin</string>

    <string name="register_success">Başarıyla kayıt olundu</string>
    <string name="register_error_user_collision">Bu e-posta adresi başka bir kullanıcı tarafından kullanılıyor.</string>
    <string name="register_error_invalid_credantial">Geçersiz format</string>
    <string name="register_error_weak_password">Lütfen daha güçlü bir şifre giriniz</string>
    <string name="register_error_default">Kayıt olurken bir sorun oluştu</string>

    <string name="update_error_default">Kaydetme başarısız</string>
    <string name="update_success">Kaydetme başarılı</string>

    <string name="form_error_blank_spaces">Lütfen boş alan bırakmayınız</string>
    <string name="lesson_saving_error_message">Ders kaydedilemedi. Lütfen girdiğiniz değerleri kontrol edin.</string>


    <string name="cancel">İptal</string>
    <string name="lesson">Ders</string>
    <string name="lessons">Dersler</string>
    <string name="e_g_kick_box">Örnek: Kick Box</string>
    <string name="day">Gün</string>
    <string name="press_to_select_a_day">Bir Gün Seçmek İçin Basın</string>
    <string name="starts_at">Başlangıç Saati</string>
    <string name="e_g_14_00">Örnek: 14.00</string>
    <string name="ends_at">Bitiş Saati</string>
    <string name="e_g_15_00">Örnek: 15.00</string>
    <string name="add_students">Öğrenci Ekle</string>
    <string name="add">Ekle</string>
    <string name="update">Güncelle</string>
    <string name="hours">Saatler</string>
    <string name="student_number">Öğrenci sayısı</string>
    <string name="accept">Kabul Et</string>
    <string name="deny">Reddet</string>
    <string name="students">Öğrenciler</string>
    <string name="add_lesson">Dersi Ekle</string>
    <string name="sign_up_requests">Kayıt Olma İstekleri</string>
    <string name="change_admin_credentials">Admin Bilgilerini Değiştirin</string>
    <string name="second_hour_should_be_after">İkinci Saat İlk Saatten Önce Olmalıdır</string>
    <string name="fill_the_blanks">Lütfen Boş Alanları Doldurun</string>
    <string name="lesson_saved">Ders Kaydedildi</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="email">E-posta</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="forgot_passowrd">Şifrenizi mi unuttunuz?</string>
    <string name="have_an_account">Hesabınız mı var? </string>
    <string name="log_in">Giriş yap</string>
    <string name="log_in_underlined"><u>Giriş yap</u></string>
    <string name="register">Kayıt Ol</string>
    <string name="cumhuriyet_spor_salonu">Cumhuriyet Spor Salonu</string>
    <string name="register_to_gym">Cumhuriyet Spor Salonuna Katıl</string>
    <string name="all_students">Öğrenciler</string>
    <string name="no_students">Kayıtlı Öğrenci Yok</string>
    <string name="save">Kaydet</string>

    <string name="no_lesson_found">Kayıtlı ders bulunmamaktadır</string>

    <string name="bmi_calculator">BMI (Vücut Kitle İndeksi) Hesaplayıcı</string>
    <string name="bmi_info">BMI, boy ve kiloya dayalı vücut yağ oranının bir ölçüsüdür. Kilonuzu kilogram olarak ve boyunuzu metre olarak girin.</string>
    <string name="weight">Kilo</string>
    <string name="height">Boy</string>
    <string name="calculate_bmi">BMI Hesapla</string>
    <string name="your_bmi">BMI"'niz (Vücut Kitle İndeksiniz)</string>

    <string name="healthy_weight">Sağlıklı Kilo</string>
    <string name="underweight">Zayıf: &lt; 18.5</string>
    <string name="normal_weight">Normal Kilo: 18.5 - 24.9</string>
    <string name="overweight">Fazla Kilolu: 25 - 29.9</string>
    <string name="obese">Obez: &gt; 30</string>

    <string name="wait_for_verify_title">Başvuru bekliyor </string>
    <string name="verify_denied_title">Başvuru reddedildi</string>
    <string name="wait_for_verify_info">Başvurunuz inceleniyor.</string>


    <string name="verify_verified_title">Başvurunuz kabul edildi</string>
    <string name="verify_verified_info">Başvurunuz az önce kabul edildi</string>
    <string name="verify_verified">Başvurunuz yönetici tarafından kabul edildi, sağlıklı günler dileriz.</string>

    <string name="verify_denied_info">Başvurunuz reddedildi.</string>
    <string name="verify_denied">Üzgünüz, ancak bu spor salonuna katılma başvurunuz yönetici tarafından reddedildi. Sorularınız varsa veya daha fazla yardıma ihtiyacınız olursa lütfen spor salonu ile iletişime geçin.</string>
    <string name="wait_for_verify">Başvurunuz yöneticiye gönderildi. Başvurunuza yanıt vermesi için yöneticiye beklemeniz gerekecek. Hesabınız doğrulandığında giriş yapabileceksiniz.</string>

    <string name="profile">Profil</string>
    <string name="edit_profile">Profili Düzenle</string>

    <string name="age">Yaş</string>
    <string name="profile_info">* Boy, kilo ve bmi(vücut kitle endeksi) yalnızca bmi hesaplama alanından değiştirilebilir</string>
    <string name="request_a_lesson">Bir derse istek gönderin</string>
    <string name="request_sent">İstek gönderildi</string>
    <string name="no_available_lessons_to_request">İstek göndermeye uygun ders bulunmamaktadır</string>


</resources>