<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/lexend_bold"

        android:text="@string/profile"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:src="@drawable/ic_user_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/imgUser"
        app:layout_constraintStart_toStartOf="@id/imgUser"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        tools:text="Batuhan Erdem" />

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_gray_edittext"
        android:fontFamily="@font/lexend_bold"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSpecs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/tvEditProfile"
        app:layout_constraintStart_toStartOf="@id/tvEditProfile"
        app:layout_constraintTop_toBottomOf="@id/tvEditProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutAge"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_gray_edittext"
            app:layout_constraintEnd_toStartOf="@id/layoutHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="Age"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/tvAgeShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_bold"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@id/tvAge"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@id/tvAge"
                app:layout_constraintTop_toBottomOf="@id/tvAge"
                tools:text="30" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeight"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/bg_gray_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutAge"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="Height"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/tvHeightShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_bold"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@id/tvHeight"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@id/tvHeight"
                app:layout_constraintTop_toBottomOf="@id/tvHeight"
                tools:text="176" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutWeight"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_gray_edittext"
            app:layout_constraintEnd_toStartOf="@id/layoutBMI"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAge">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="Weight"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/tvWeightShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_bold"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@id/tvWeight"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@id/tvWeight"
                app:layout_constraintTop_toBottomOf="@id/tvWeight"
                tools:text="30" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBMI"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/bg_gray_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutWeight"
            app:layout_constraintTop_toTopOf="@id/layoutWeight">

            <TextView
                android:id="@+id/tvBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="BMI"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/tvBMIShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_bold"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@id/tvBMI"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@id/tvBMI"
                app:layout_constraintTop_toBottomOf="@id/tvBMI"
                tools:text="30" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/layoutSpecs"
        app:layout_constraintStart_toStartOf="@id/layoutSpecs"
        app:layout_constraintTop_toBottomOf="@id/layoutSpecs">

        <TextView
            android:id="@+id/tvLessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/lessons"
            android:textColor="@color/custom_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLessonName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/tvLessons"
            app:layout_constraintTop_toBottomOf="@id/tvLessons"
            tools:listitem="@layout/item_lesson_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="83dp" />
</androidx.constraintlayout.widget.ConstraintLayout>